updated cosumer, producer